--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 
 body::before {
-    background-image: url("img/code.png");
+    background-image: url("img/code.jpeg");
     background-repeat: no-repeat;
     background-position: right;
     content: "";
